--- a/src/Components/ProfileBanner/ProfileBanner.scss
+++ b/src/Components/ProfileBanner/ProfileBanner.scss
@@ -41,3 +41,11 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+    .ProfileBanner {
+        width: 100%;
+        padding: 70px 0;
+        margin: 0 0 50px;
+    }
+}
